--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,2 +1,58 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<html>heloo</html>
+<head>
+    <title>LCS Testing Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <link rel="stylesheet" type="text/css"
+          href="webjars/bootstrap/5.0.0/css/bootstrap.min.css"/>
+</head>
+<body>
+
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="https://github.com/GoldenBear19355/Assignments/tree/master">Github Code</a>
+        </div>
+    </div>
+</nav>
+
+<div class="container" style="min-height: 500px">
+
+    <div class="starter-template">
+        <h1>LCS Assignment</h1>
+     
+
+        <form class="form-horizontal" id="search-form">
+            <div class="form-group form-group-lg">
+                <label class="col-sm-2 control-label">LCS Request</label>
+                
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="setofstrings"/>
+                </div>
+            </div>
+<br/>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" id="bth-search"
+                            class="btn btn-primary btn-lg">POST
+                    </button>
+                </div>
+            </div>
+        </form>
+        <br/>
+        	 <div id="lcsrequest"></div>
+        <br/> 	 
+			 <div id="feedback"></div>
+    </div>
+
+</div>
+
+<script type="text/javascript"
+        src="webjars/jquery/3.6.0/jquery.min.js"></script>
+
+<script type="text/javascript" src="main.js"></script>
+
+</body>
+</html>
